# hypermind

./: CMakeLists.txt  Makefile  hypermind.hpp
.github/agents/: hypermind.md
docs/: README.md  implementation_guide.md
